--- a/static/index.html
+++ b/static/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/wrench-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/static/wrench-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unity Catalog Swiss Army Knife</title>
-    <script type="module" crossorigin src="/index-DzpABGq8.js"></script>
-    <link rel="modulepreload" crossorigin href="/vendor-BbMx8q9L.js">
-    <link rel="stylesheet" crossorigin href="/index-BzfsUW29.css">
+    <script type="module" crossorigin src="/static/index-D8LqfoXl.js"></script>
+    <link rel="modulepreload" crossorigin href="/static/vendor-BbMx8q9L.js">
+    <link rel="stylesheet" crossorigin href="/static/index-BzfsUW29.css">
   </head>
   <body>
     <div id="root"></div>
