Update FE code again

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/static/wrench-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unity Catalog Swiss Army Knife</title>
-    <script type="module" crossorigin src="/static/index-ZsHciF8d.js"></script>
+    <script type="module" crossorigin src="/static/index-Fo2Z1Sof.js"></script>
     <link rel="modulepreload" crossorigin href="/static/vendor-BbMx8q9L.js">
     <link rel="stylesheet" crossorigin href="/static/index-DPxqrTVi.css">
   </head>
