Updated FE build

--- a/static/index.html
+++ b/static/index.html
@@ -5,9 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/static/wrench-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Unity Catalog Swiss Army Knife</title>
-    <script type="module" crossorigin src="/static/index-Fo2Z1Sof.js"></script>
-    <link rel="modulepreload" crossorigin href="/static/vendor-BbMx8q9L.js">
-    <link rel="stylesheet" crossorigin href="/static/index-DPxqrTVi.css">
+    <script type="module" crossorigin src="/static/index-DJjxqbl9.js"></script>
+    <link rel="modulepreload" crossorigin href="/static/vendor-ZIJ_X5tk.js">
+    <link rel="stylesheet" crossorigin href="/static/index-TR-X-4xU.css">
   </head>
   <body>
     <div id="root"></div>
